# wadir-whatsapp-direct

./: .eslintrc  package.json  vite.config.ts.timestamp-1672570348787.mjs
.github/workflows/: app_builder.yml
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  lib.rs  main.rs  model.rs
src/components/: ControlledSelect.component.tsx  FavoriteList.component.tsx  Footer.component.tsx  Form.component.tsx  Header.component.tsx  StarToggle.component.tsx  Themetoggle.component.tsx  Title.component.tsx
src/hooks/: contact.hook.ts
src/layouts/: Main.layout.tsx
src/screens/: Favorite.screen.tsx  Main.screen.tsx  Notfound.screen.tsx
src/screens/services/: contact.service.tsx.tsx
