[package]
name = "wadir-whatsapp-direct"
version = "0.0.0"
description = "A Tauri App"
authors = ["arifinoid"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
bench = false          # Is benchmarked by default.
crate-type = ["lib"]   # The crate types to generate.

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
chrono = { version = "0.4.19", features = ["serde"] }
jfs = "0.6.2"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
strip = true # Automatically strip symbols from the binary.
lto = true # Enables link to optimizations
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
opt-level = "s"  # Optimize for binary size
